# Planets-Console

./: .config.yaml  .gitignore  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
assets/: turn.json
docs/: Planets-Console.code-workspace  configuration.md  cursor-github-setup.md  design-account-api-key-and-silent-login.md  design-adding-a-turn-analytic.md  design-analytic-exports.md  design-analytics-structure.md  design-compute-orchestrator.md  design-connections-analytic.md  design-fleet-analytic.md  design-frontend-and-backend-state.md  design-homeworld-locator-analytic.md  design-inference-corpus.md  design-issue-10-base-map-from-core.md  design-issue-12-login-identity.md  design-issue-13-game-selection.md  design-map-planet-labels-and-options.md  design-military-score-build-inference-implementation.md  design-military-score-build-inference.md  design-military-score-inference-build-priors.md  design-military-score-inference-solution-modal.md  design-planets-api-data-model.md  design-player-elimination.md  design-shell-error-handling.md  design-stellar-cartography-analytic.md  design-stellar-cartography-map-rendering.md  design-storage-abstraction-and-crud-api.md  design-warp-wells-map.md  implementation-basic-ui-framework.md  plan-inference-occurrence-prior-unification.md  plan-issue-200-scores-orchestrator-migration.md  user-guide.md  vga-planets-domain-context.md
scripts/: analyze_hull_catalog_sources.py  check_no_monolithic_schema.py  clear_analytic_persistence.py  early_stop_hull_collisions.py  extract_homeworlds.py  filter_bff_openapi.py  run_dev.sh  (+8 more)
(+52 files in other folders)
