[project]
name = "planets-console"
version = "0.1.0"
description = "Analytic console for planets.nu game state"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["server"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.uv.workspace]
members = ["packages/server", "packages/api", "packages/bff"]

[tool.uv.sources]
server = { workspace = true }

